minor structure changes to the forms, JWT implemented

--- a/Files/index.html
+++ b/Files/index.html
@@ -16,8 +16,10 @@
                 <img src="images/Logo.png" alt="FitIT" class="logo-img">
             </a>
              <h1>FitIT</h1>
-            <button class="sign-in">Sign in</button>
            </div>
+           <a href="login.html">
+         <button class="sign-in">Sign in</button>
+       </a>
         </nav>
     </header>
 
