--- a/Files/login.html
+++ b/Files/login.html
@@ -43,6 +43,6 @@
         <img src="images/Fit.png" alt="Fit Bob" class="side-image" />
         </div>
     </main>
-
+    <script src="login.js"></script>
 </body>
 </html>
