--- a/Files/signup.html
+++ b/Files/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debug your body!</title>
     <link rel="icon" type="image/x-icon" href="/images/Biceps.png">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="signup.css">
 </head>
 <body>
     <header>
@@ -23,9 +23,9 @@
         <div class="form-layout">
             <img src="images/Fat.png" alt="Fat Bob" class="side-image" />
         
-        <article class="login-container">
+        <article class="signup-container">
             <h1>Create your account</h1>
-            <form class="login-form">
+            <form class="signup-form">
                 <div>
                     <input type="email" placeholder="Email" required />
                 </div>
@@ -35,8 +35,17 @@
                 <div>
                     <input type="password" placeholder="Repeat Password" required />
                 </div>
-                
-                <button type="Create Account">Sign In</button>
+                <div>
+                    <select required>
+                        <option value="">Select Gender</option>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                    </select>
+                </div>
+                <div>
+                    <input type="number" placeholder="Age" min="0" />
+                </div>
+                <button type="submit">Create Account</button>
             </form>
             <p class="signup-prompt">
             Allready got an account? <a href="login.html">Log in</a>
@@ -46,6 +55,6 @@
         <img src="images/Fit.png" alt="Fit Bob" class="side-image" />
         </div>
     </main>
-
+    <script src="signup.js"></script>
 </body>
 </html>
