profile page, navigation and logic added

--- a/Files/dashboard.html
+++ b/Files/dashboard.html
@@ -16,10 +16,13 @@
                 <img src="images/Logo.png" alt="FitIT" class="logo-img">
             </a>
              <h1>FitIT</h1>
-            
            </div>
+           <a href="profile.html">
+         <button class="profile-button">Profile</button>
+       </a>
         </nav>
     </header>
+
     <script src="dashboard.js"></script>
 <body>
     
