--- a/Files/profile.html
+++ b/Files/profile.html
@@ -15,6 +15,9 @@
             </a>
              <h1>FitIT</h1>
            </div>
+           <a href="dashboard.html">
+         <button class="dashboard-btn">Dashboard</button>
+       </a>
         </nav>
     </header>
     <main>
@@ -39,6 +42,10 @@
                 </div>
                 <button type="submit">Save Profile</button>
             </form>
+            <div class="bmi-row">
+                <button type="button" id="calc-bmi-btn" class="profile-form-btn">Calculate BMI</button>
+            </div>
+            <div class="bmi-value" id="bmi-value"></div>
         </article>
     </main>
     <script src="profile.js"></script>
