All musts are now fullfilled. Homepage - Index fully done.
Dashboard - Nearly done.
You can now get a random Workout with 6 exercises, but it only shows the names in a small window.
Creating your own workout, is not able to save.

Cleaned app.js

S1: Consume 2 APIs - done
S2: Second FE - cancel
S3: W3C valid - nearly done
s4: Responsive - nearly done

--- a/Files/index.html
+++ b/Files/index.html
@@ -17,16 +17,16 @@
             </a>
              <h1>FitIT</h1>
            </div>
-           <a href="login.html">
-         <button class="sign-in">Sign in</button>
+           <a href="login.html">         
        </a>
+       <button class="sign-in">Sign in</button>
         </nav>
     </header>
 
     <main>
         <section class ="hero">
             <nav class="hero-text">
-                <h1>Your code runs better when you do.</h1>
+                <h2>Your code runs better when you do.</h2>
             </nav>
             <figure class="hero-image">
             <img src="./images/FitShadow.png" alt="FitShadow" />
@@ -57,5 +57,10 @@
             <button class="get-started">Get Started!</button>
         </section>
     </main>
+    <script>
+      document.querySelector('.get-started').addEventListener('click', function() {
+        window.location.href = 'login.html';
+      });
+    </script>
 </body>
 </html>
