folderstructure chnged. initial implementation of favorites and recent workouts

--- a/Files/create-workout/create-workout.html
+++ b/Files/create-workout/create-workout.html
@@ -10,8 +10,8 @@
   <header>
     <nav class="header-nav">
       <div class="logo-container">
-        <a href="index.html">
-          <img src="images/Logo.png" alt="FitIT" class="logo-img" />
+        <a href="../index.html">
+          <img src="../images/Logo.png" alt="FitIT" class="logo-img" />
         </a>
         <h1>FitIT</h1>
       </div>
