--- a/Files/login/login.html
+++ b/Files/login/login.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debug your body!</title>
-    <link rel="icon" type="image/x-icon" href="/images/Biceps.png">
+    <link rel="icon" type="image/x-icon" href="../images/Biceps.png">
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <header>
         <nav class="header-nav">
             <div class="logo-container">
-                <a href="index.html">
-                    <img src="images/Logo.png" alt="FitIT" class="logo-img">
+                <a href="../index.html">
+                    <img src="../images/Logo.png" alt="FitIT" class="logo-img">
                 </a>
                 <h1>FitIT</h1>
             </div>
@@ -20,7 +20,7 @@
     </header>
     <main>
         <section class="form-layout">
-            <img src="images/Fat.png" alt="Fat Bob" class="side-image" />
+            <img src="../images/Fat.png" alt="Fat Bob" class="side-image" />
             <article class="login-container">
                 <h2>Sign in to FitIT</h2>
                 <form class="login-form">
@@ -35,10 +35,10 @@
                     <button type="submit">Sign In</button>
                 </form>
                 <p class="signup-prompt">
-                    New to FitIT? <a href="signup.html">Create an account</a>
+                    New to FitIT? <a href="../signup/signup.html">Create an account</a>
                 </p>
             </article>
-            <img src="images/Fit.png" alt="Fit Bob" class="side-image" />
+            <img src="../images/Fit.png" alt="Fit Bob" class="side-image" />
         </section>
     </main>
     <script src="login.js"></script>
