--- a/Files/dashboard/dashboard.html
+++ b/Files/dashboard/dashboard.html
@@ -11,11 +11,11 @@
     
   <aside class="sidebar">
     <div class="logo-container">
-      <img src="images/Logo.png" alt="FitIT" class="logo-img"/>
+      <img src="../images/Logo.png" alt="FitIT" class="logo-img"/>
       <h1>FitIT</h1>
     </div>
     <nav class="sidebar-nav">
-      <a href="profile.html">Profile</a>
+      <a href="../profile/profile.html">Profile</a>
       <a href="#favorites">Favorite Workouts</a>
       <a href="#recent">Recent Workouts</a>
     </nav>
