--- a/Files/index.html
+++ b/Files/index.html
@@ -1,66 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitIt - Debug your body!</title>
-    <link rel="icon" type="image/x-icon" href="/images/Biceps.png">
-    <link rel="stylesheet" href="index.css">
-    
-</head>
-<body>
+    <link rel="icon" type="image/x-icon" href="/images/Biceps.png" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
     <header>
-        <nav class="header-nav">
-           <div class="logo-container">
-            <a href="index.html">
-                <img src="images/Logo.png" alt="FitIT" class="logo-img">
-            </a>
-             <h1>FitIT</h1>
-           </div>
-           <a href="login.html">         
-       </a>
-       <button class="sign-in">Sign in</button>
-        </nav>
+      <nav class="header-nav">
+        <div class="logo-container">
+          <a href="index.html">
+            <img src="images/Logo.png" alt="FitIT" class="logo-img" />
+          </a>
+          <h1>FitIT</h1>
+        </div>
+        <a href="login/login.html"> </a>
+        <a href="signup/signup.html">
+          <button class="sign-in">Sign in</button>
+        </a>
+      </nav>
     </header>
 
     <main>
-        <section class ="hero">
-            <nav class="hero-text">
-                <h2>Your code runs better when you do.</h2>
-            </nav>
-            <figure class="hero-image">
-            <img src="./images/FitShadow.png" alt="FitShadow" />
-            </figure>
-        </section>
+      <section class="hero">
+        <nav class="hero-text">
+          <h2>Your code runs better when you do.</h2>
+        </nav>
+        <figure class="hero-image">
+          <img src="./images/FitShadow.png" alt="FitShadow" />
+        </figure>
+      </section>
 
-        <section class="mission">
-            <figure class="mission-image">
-                <img src="./images/BobPC.png" alt="BobPC" />
-            </figure>
-            <article class="mission-text">
-                <h2> What is our mission?</h2>
-                <p>
-                At FitIT, we’re on a mission to help software developers build more than just code —
-                we want you to build a healthier, stronger you. Sitting at a desk all day shouldn’t
-                mean sacrificing your fitness goals. That’s why we’ve designed a fitness tracker and
-                workout planner with developers in mind...
-                </p>
-            </article>
-        </section>
+      <section class="mission">
+        <figure class="mission-image">
+          <img src="./images/BobPC.png" alt="BobPC" />
+        </figure>
+        <article class="mission-text">
+          <h2>What is our mission?</h2>
+          <p>
+            At FitIT, we’re on a mission to help software developers build more
+            than just code — we want you to build a healthier, stronger you.
+            Sitting at a desk all day shouldn’t mean sacrificing your fitness
+            goals. That’s why we’ve designed a fitness tracker and workout
+            planner with developers in mind...
+          </p>
+        </article>
+      </section>
 
-        <section class="call-to-action">
-            <aside class="cta-images">
-                <img src="./images/Babara.png" alt="Babara" />
-                <img src="./images/bobExercising.png" alt="bobExercising" />
-            </aside>
-            <h3>What are you waiting for?</h3>
-            <button class="get-started">Get Started!</button>
-        </section>
+      <section class="call-to-action">
+        <aside class="cta-images">
+          <img src="./images/Babara.png" alt="Babara" />
+          <img src="./images/bobExercising.png" alt="bobExercising" />
+        </aside>
+        <h3>What are you waiting for?</h3>
+        <button class="get-started">Get Started!</button>
+      </section>
     </main>
     <script>
-      document.querySelector('.get-started').addEventListener('click', function() {
-        window.location.href = 'login.html';
-      });
+      document
+        .querySelector(".get-started")
+        .addEventListener("click", function () {
+          window.location.href = "login/login.html";
+        });
     </script>
-</body>
+  </body>
 </html>
