--- a/Files/profile/profile.html
+++ b/Files/profile/profile.html
@@ -10,12 +10,12 @@
     <header>
         <nav class="header-nav">
            <div class="logo-container">
-            <a href="index.html">
-                <img src="images/Logo.png" alt="FitIT" class="logo-img">
+            <a href="../index.html">
+                <img src="../images/Logo.png" alt="FitIT" class="logo-img">
             </a>
              <h1>FitIT</h1>
            </div>
-           <a href="dashboard.html">
+           <a href="../dashboard/dashboard.html">
          <button class="dashboard-btn">Dashboard</button>
        </a>
         </nav>
