--- a/Files/signup/signup.html
+++ b/Files/signup/signup.html
@@ -12,7 +12,7 @@
         <nav class="header-nav">
             <div class="logo-container">
                 <a href="index.html">
-                    <img src="images/Logo.png" alt="FitIT" class="logo-img">
+                    <img src="../images/Logo.png" alt="FitIT" class="logo-img">
                 </a>
                 <h1>FitIT</h1>
             </div>
@@ -20,7 +20,7 @@
     </header>
     <main>
         <section class="form-layout">
-            <img src="images/Fat.png" alt="Fat Bob" class="side-image" />
+            <img src="../images/Fat.png" alt="Fat Bob" class="side-image" />
             <article class="signup-container">
                 <h2>Create your account</h2>
                 <form class="signup-form">
@@ -51,10 +51,10 @@
                     <button type="submit">Create Account</button>
                 </form>
                 <p class="signup-prompt">
-                    Already got an account? <a href="login.html">Log in</a>
+                    Already got an account? <a href="../login/login.html">Log in</a>
                 </p>
             </article>
-            <img src="images/Fit.png" alt="Fit Bob" class="side-image" />
+            <img src="../images/Fit.png" alt="Fit Bob" class="side-image" />
         </section>
     </main>
     <script src="signup.js"></script>
