Create Workout made better

--- a/Files/create-workout/create-workout.html
+++ b/Files/create-workout/create-workout.html
@@ -23,6 +23,7 @@
       <h2>Create Your Custom Workout</h2>
       <form id="workout-form">
         <input type="text" id="workout-name" placeholder="Workout Name" required />
+        <div id="equipment-filter-container" class="equipment-filter-container"></div>
         <div id="exercise-list"></div>
         <button type="submit">Save Workout</button>
       </form>
