--- a/Files/dashboard/dashboard.html
+++ b/Files/dashboard/dashboard.html
@@ -16,7 +16,7 @@
     </div>
     <nav class="sidebar-nav">
       <a href="../profile/profile.html">Profile</a>
-      <a href="#favorites">Favorite Workouts</a>
+      <a href="../favorites/favorites.html">Favorite Workouts</a>
       <a href="#recent">Recent Workouts</a>
     </nav>
   </aside>
