FE is w3c compliant  implementation of initial delete favorite

--- a/Files/dashboard/dashboard.html
+++ b/Files/dashboard/dashboard.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard | FitIT</title>
-  <link rel="stylesheet" href="dashboard.css" />
+  <link rel="stylesheet" href="dashboard.css">
 </head>
 
 <body>
     
   <aside class="sidebar">
     <div class="logo-container">
-      <img src="../images/Logo.png" alt="FitIT" class="logo-img"/>
+      <img src="../images/Logo.png" alt="FitIT" class="logo-img">
       <h1>FitIT</h1>
     </div>
     <nav class="sidebar-nav">
