--- a/Files/favorites/favorites.html
+++ b/Files/favorites/favorites.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Favorite Workouts | FitIT</title>
-  <link rel="stylesheet" href="favorites.css" />
+  <link rel="stylesheet" href="favorites.css">
 </head>
 
 <body>
@@ -15,10 +15,12 @@
 
   <main class="favorites-container">
     <section class="workout-grid" id="favorites-container">
+      <h2 class="visually-hidden">Favorite Form</h2>
       <!-- Favorite workout cards will be rendered here -->
     </section>
 
     <section id="workout-details" class="workout-details">
+      <h2 class="visually-hidden">Workout Details</h2>
       <!-- Exercise details will be shown here on click -->
     </section>
   </main>
