--- a/Files/login/login.html
+++ b/Files/login/login.html
@@ -20,17 +20,18 @@
     </header>
     <main>
         <section class="form-layout">
-            <img src="../images/Fat.png" alt="Fat Bob" class="side-image" />
+            <h2 class="visually-hidden">Layout Form</h2>
+            <img src="../images/Fat.png" alt="Fat Bob" class="side-image">
             <article class="login-container">
                 <h2>Sign in to FitIT</h2>
                 <form class="login-form">
                     <div>
                         <label for="email"></label>
-                        <input id="email" type="email" placeholder="Email" required />
+                        <input id="email" type="email" placeholder="Email" required>
                     </div>
                     <div>
                         <label for="password"></label>
-                        <input id="password" type="password" placeholder="Password" required />
+                        <input id="password" type="password" placeholder="Password" required>
                     </div>
                     <button type="submit">Sign In</button>
                 </form>
@@ -38,7 +39,7 @@
                     New to FitIT? <a href="../signup/signup.html">Create an account</a>
                 </p>
             </article>
-            <img src="../images/Fit.png" alt="Fit Bob" class="side-image" />
+            <img src="../images/Fit.png" alt="Fit Bob" class="side-image">
         </section>
     </main>
     <script src="login.js"></script>
