--- a/Files/create-workout/create-workout.html
+++ b/Files/create-workout/create-workout.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Create Workout | FitIT</title>
-  <link rel="stylesheet" href="create-workout.css" />
+  <link rel="stylesheet" href="create-workout.css">
 </head>
 <body>
   <header>
     <nav class="header-nav">
       <div class="logo-container">
         <a href="../index.html">
-          <img src="../images/Logo.png" alt="FitIT" class="logo-img" />
+          <img src="../images/Logo.png" alt="FitIT" class="logo-img">
         </a>
         <h1>FitIT</h1>
       </div>
@@ -22,7 +22,7 @@
     <section class="create-section">
       <h2>Create Your Custom Workout</h2>
       <form id="workout-form">
-        <input type="text" id="workout-name" placeholder="Workout Name" required />
+        <input type="text" id="workout-name" placeholder="Workout Name" required>
         <div id="equipment-filter-container" class="equipment-filter-container"></div>
         <div id="exercise-list"></div>
         <button type="submit">Save Workout</button>
