--- a/Files/index.html
+++ b/Files/index.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitIt - Debug your body!</title>
-    <link rel="icon" type="image/x-icon" href="/images/Biceps.png" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="icon" type="image/x-icon" href="/images/Biceps.png">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <header>
       <nav class="header-nav">
         <div class="logo-container">
           <a href="index.html">
-            <img src="images/Logo.png" alt="FitIT" class="logo-img" />
+            <img src="images/Logo.png" alt="FitIT" class="logo-img">
           </a>
           <h1>FitIT</h1>
         </div>
-        <a href="login/login.html"> </a>
-        <a href="signup/signup.html">
-          <button class="sign-in">Sign in</button>
-        </a>
+        <a href="signup/signup.html" class="sign-in">Sign in</a>
       </nav>
     </header>
 
     <main>
       <section class="hero">
+         <h2 class="visually-hidden">Hero Section</h2>
         <nav class="hero-text">
           <h2>Your code runs better when you do.</h2>
         </nav>
         <figure class="hero-image">
-          <img src="./images/FitShadow.png" alt="FitShadow" />
+          <img src="./images/FitShadow.png" alt="FitShadow">
         </figure>
       </section>
 
       <section class="mission">
+        <h2 class="visually-hidden">Mission Section</h2>
         <figure class="mission-image">
-          <img src="./images/BobPC.png" alt="BobPC" />
+          <img src="./images/BobPC.png" alt="BobPC">
         </figure>
         <article class="mission-text">
           <h2>What is our mission?</h2>
@@ -51,8 +50,8 @@
 
       <section class="call-to-action">
         <aside class="cta-images">
-          <img src="./images/Babara.png" alt="Babara" />
-          <img src="./images/bobExercising.png" alt="bobExercising" />
+          <img src="./images/Babara.png" alt="Babara">
+          <img src="./images/bobExercising.png" alt="bobExercising">
         </aside>
         <h3>What are you waiting for?</h3>
         <button class="get-started">Get Started!</button>
