--- a/Files/signup/signup.html
+++ b/Files/signup/signup.html
@@ -20,21 +20,22 @@
     </header>
     <main>
         <section class="form-layout">
-            <img src="../images/Fat.png" alt="Fat Bob" class="side-image" />
+            <h2 class="visually-hidden">Form Section</h2>
+            <img src="../images/Fat.png" alt="Fat Bob" class="side-image">
             <article class="signup-container">
                 <h2>Create your account</h2>
                 <form class="signup-form">
                     <div>
                         <label for="email"></label>
-                        <input id="email" type="email" placeholder="Email" required />
+                        <input id="email" type="email" placeholder="Email" required>
                     </div>
                     <div>
                         <label for="password"></label>
-                        <input id="password" type="password" placeholder="Password" required />
+                        <input id="password" type="password" placeholder="Password" required>
                     </div>
                     <div>
                         <label for="repeat-password"></label>
-                        <input id="repeat-password" type="password" placeholder="Repeat Password" required />
+                        <input id="repeat-password" type="password" placeholder="Repeat Password" required>
                     </div>
                     <div>
                         <label for="gender"></label>
@@ -46,7 +47,7 @@
                     </div>
                     <div>
                         <label for="age"></label>
-                        <input id="age" type="number" placeholder="Age" min="0" />
+                        <input id="age" type="number" placeholder="Age" min="0">
                     </div>
                     <button type="submit">Create Account</button>
                 </form>
@@ -54,7 +55,7 @@
                     Already got an account? <a href="../login/login.html">Log in</a>
                 </p>
             </article>
-            <img src="../images/Fit.png" alt="Fit Bob" class="side-image" />
+            <img src="../images/Fit.png" alt="Fit Bob" class="side-image">
         </section>
     </main>
     <script src="signup.js"></script>
